# ARASAAC_MCP

./: .env.example  .gitignore  00_PLAN_MAESTRO.md  01_MAPA_OPENSPEC.md  02_AGENTES_SKILLS_WORKFLOWS_V2.md  03_REPO_SKELETON.md  04_ROADMAP_BACKLOG_DOD_RIESGOS.md  99_FUENTES_Y_REFERENCIAS.md  AGENTS.md  Makefile  NOTICE-ARASAAC.md  README.md  docker-compose.yml  generate_files.py
.agents/: 00_OPERATING_MODEL.md  README.md
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_workspaces.py
services/api/src/arasaac_platform/: __init__.py  main.py
services/api/src/arasaac_platform/ai/: __init__.py  privacy.py  provider.py
services/api/src/arasaac_platform/api/: ai.py  materials.py  pictograms.py  preferences.py
services/api/src/arasaac_platform/arasaac/: __init__.py  client.py
services/api/tests/: conftest.py  test_ai_api.py  test_ai_privacy.py  test_ai_provider 2.py  test_ai_provider.py  test_ai_service.py  test_arasaac_connector.py  test_governance.py  test_health.py  test_material_api 2.py  test_material_api.py  test_material_api_extended.py  test_material_domain.py  test_material_services.py  test_pictogram_api 2.py  test_pictogram_service.py  test_postgres_integration 2.py  test_postgres_integration.py  test_release2_generators.py  test_sql_repository.py  test_validation_api.py  test_validation_service.py  test_workspace_domain.py
services/mcp/: Dockerfile  Dockerfile 2  pyproject.toml
services/mcp/src/safe_mcp/: __init__.py  main.py  server.py
services/mcp/tests/: test_mcp_server.py  test_status.py
(+1038 files in other folders)
