[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "arasaac-platform-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "reportlab>=4.4,<5",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pypdf>=6,<7",
  "pytest>=8.3,<9",
  "pytest-cov>=7.1,<8",
  "ruff>=0.11,<1",
  "types-reportlab>=4.4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arasaac_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that call an approved external service",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100
