[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "arasaac-safe-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.27,<2",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
arasaac-mcp = "safe_mcp.server:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=7.1,<8",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/safe_mcp"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100
